--- a/POC_SVA_IOS/POC_SVA_IOS.csproj
+++ b/POC_SVA_IOS/POC_SVA_IOS.csproj
@@ -82,6 +82,18 @@
     <Compile Include="ViewController.designer.cs">
       <DependentUpon>ViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewControllerBo.cs" />
+    <Compile Include="ViewControllerBo.designer.cs">
+      <DependentUpon>ViewControllerBo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewControllerSnow.cs" />
+    <Compile Include="ViewControllerSnow.designer.cs">
+      <DependentUpon>ViewControllerSnow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewControllerCeleste.cs" />
+    <Compile Include="ViewControllerCeleste.designer.cs">
+      <DependentUpon>ViewControllerCeleste.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
